# debug_mcp

./: .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test_conditional_tools.py
.claude/commands/: test.md
.serena/memories/: project-preferences.md  tool-verification-tests.md
context/spec/001-jira-integration/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-tool-discovery-gateway/: functional-spec.md  tasks.md  technical-considerations.md
examples/: .mcp.json.example
src/aws_debug_mcp/: mcp_proxy.py  server.py
src/debug_mcp/: __main__.py  mcp_proxy.py  registry.py  server.py
src/debug_mcp/tools/: cloudwatch_logs.py  cloudwatch_registry.py  jira.py  jira_registry.py  langsmith.py  langsmith_registry.py  stepfunctions.py  stepfunctions_registry.py
tests/: test_default_tools.py  test_mcp_proxy.py
