[project]
name = "debug-mcp"
version = "0.1.0"
description = "MCP server for debugging AWS distributed systems"
authors = [
    {name = "Evgenii Basmov", email = "eb@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
debug-mcp = "debug_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
